--- a/ski.vcxproj.filters
+++ b/ski.vcxproj.filters
@@ -55,5 +55,8 @@
     <ClInclude Include="src\camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\behaviours\behaviour.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
