--- a/ski.vcxproj.filters
+++ b/ski.vcxproj.filters
@@ -64,5 +64,19 @@
     <ClInclude Include="src\data.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\structures\array.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\structures\list.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\structures\array.tcc">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="src\structures\list.tcc">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
