--- a/ski.vcxproj.filters
+++ b/ski.vcxproj.filters
@@ -70,6 +70,9 @@
     <ClInclude Include="src\structures\list.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\levels\level.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\structures\array.tcc">
