--- a/ski.vcxproj.filters
+++ b/ski.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClCompile Include="src\data.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\levels\mainlevel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h">
@@ -71,6 +74,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\levels\level.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\levels\mainlevel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
