--- a/ski.vcxproj.filters
+++ b/ski.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClCompile Include="src\levels\mainlevel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\behaviours\player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h">
@@ -77,6 +80,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\levels\mainlevel.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\behaviours\player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
