--- a/ski.vcxproj
+++ b/ski.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="src\data.cpp" />
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\gameobject.cpp" />
+    <ClCompile Include="src\input.cpp" />
     <ClCompile Include="src\levels\mainlevel.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\physics.cpp" />
@@ -37,6 +38,7 @@
     <ClInclude Include="src\data.h" />
     <ClInclude Include="src\game.h" />
     <ClInclude Include="src\gameobject.h" />
+    <ClInclude Include="src\input.h" />
     <ClInclude Include="src\levels\level.h" />
     <ClInclude Include="src\levels\mainlevel.h" />
     <ClInclude Include="src\physics.h" />
