Implemented moving obstacle.

--- a/ski.vcxproj.filters
+++ b/ski.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClCompile Include="src\behaviours\obstacle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\behaviours\goat.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h">
@@ -95,6 +98,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\behaviours\obstacle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\behaviours\goat.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
