--- a/ski.vcxproj.filters
+++ b/ski.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClCompile Include="src\behaviours\goat.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\structures\quadtree.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h">
@@ -101,6 +104,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\behaviours\goat.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\structures\quadtree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
