--- a/ski.vcxproj
+++ b/ski.vcxproj
@@ -33,6 +33,7 @@
     <ClCompile Include="src\renderer.cpp" />
     <ClCompile Include="src\sprite.cpp" />
     <ClCompile Include="src\structures\quadtree.cpp" />
+    <ClCompile Include="src\text.cpp" />
     <ClCompile Include="src\timer.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -53,6 +54,7 @@
     <ClInclude Include="src\structures\array.h" />
     <ClInclude Include="src\structures\list.h" />
     <ClInclude Include="src\structures\quadtree.h" />
+    <ClInclude Include="src\text.h" />
     <ClInclude Include="src\timer.h" />
     <ClInclude Include="src\types.h" />
   </ItemGroup>
