--- a/ski.vcxproj
+++ b/ski.vcxproj
@@ -37,6 +37,7 @@
     <ClCompile Include="src\timer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="res\resource.h" />
     <ClInclude Include="src\behaviours\behaviour.h" />
     <ClInclude Include="src\behaviours\goat.h" />
     <ClInclude Include="src\behaviours\obstacle.h" />
@@ -61,6 +62,12 @@
   <ItemGroup>
     <None Include="src\structures\array.tcc" />
     <None Include="src\structures\list.tcc" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="res\resource.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="res\icon.ico" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{B404540E-E8C1-4DCC-8444-10C2B9E1D88B}</ProjectGuid>
