--- a/ski.vcxproj.filters
+++ b/ski.vcxproj.filters
@@ -9,7 +9,7 @@
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
-    <Filter Include="Resourcea Files">
+    <Filter Include="Resource Files">
       <UniqueIdentifier>{507b1da6-5652-4826-adb2-792587749956}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -125,7 +125,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="res\resource.h">
-      <Filter>Resourcea Files</Filter>
+      <Filter>Resource Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -138,12 +138,12 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\icon.ico">
-      <Filter>Resourcea Files</Filter>
+      <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\resource.rc">
-      <Filter>Resourcea Files</Filter>
+      <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
 </Project>
