--- a/ski.vcxproj.filters
+++ b/ski.vcxproj.filters
@@ -127,6 +127,9 @@
     <ClInclude Include="res\resource.h">
       <Filter>Resource Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\structures\queue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\structures\array.tcc">
